using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ManagePlayer : MonoBehaviour
{
    Animator animator;
    ManageInput inputManager;
    // CameraManager cameraManager;
    Locomotion playerLocomotion;

    public bool isInteracting;

    private void Awake()
    {
        animator = GetComponent<Animator>();
        inputManager = GetComponent<ManageInput>();
        // cameraManager = FindObjectOfType<CameraManager>();
        playerLocomotion = GetComponent<Locomotion>();
    }

    private void Update()
    {
        inputManager.HandleAllInputs();
    }

    private void FixedUpdate()
    {
        playerLocomotion.HandleAllMovement();
    }

    private void LateUpdate()
    {
        // cameraManager.HandleAllCameraMovement();
        isInteracting = animator.GetBool("isInteracting");

        // Jumping
        playerLocomotion.isJumping = animator.GetBool("isJumping");
        animator.SetBool("isGrounded", playerLocomotion.isGrounded);
    }
}
